--- a/hw1.css
+++ b/hw1.css
@@ -1,6 +1,6 @@
 header {
 	background:#bdbdbd;
-	background-image: url("../images/flywheel.jpg");
+	background-image: url("../flywheel.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 200px;
