--- a/hw1.css
+++ b/hw1.css
@@ -1,5 +1,5 @@
 header {
-	background:#bdbdbd;
+	background:#32598e;
 	background-image: url("../flywheel.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
