--- a/hw1.css
+++ b/hw1.css
@@ -44,7 +44,7 @@ h2{
 	text-transform: uppercase;
 }	
 
-img {width:200px; height: 100px;
+img {width:90%; 
 	border: 1px solid #000000;
 	margin-left: auto;
 	margin-right: auto;
