--- a/hw1.css
+++ b/hw1.css
@@ -1,6 +1,6 @@
 header {
 	background:#32598e;
-	background-image: url("../flywheel.jpg");
+	background-image: url("../images/flywheel.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 200px;
@@ -44,20 +44,20 @@ h2{
 	text-transform: uppercase;
 }	
 
-img {width:90%; 
+img {width:78%; 
 	border: 1px solid #000000;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 30px;
 	margin-top: 30px;
 	display: block;
-	
 }
 
 .left {float:left;
-	width:20%;
+	width:25%;
 	background: #a8a8a8;
 	padding-bottom: 100px;}
+
 .right{float:right;
-	width: 75%;
+	width: 70%;
 	padding: 2%;}
